--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -253,7 +253,7 @@
                         <h3 class="name">Safari nurkowe w Egipcie</h3>
                         <h6 class="function">7 dni</h6>
                         <i class="fas fa-plane ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"
-                            data-placement="top" title="car"></i>
+                            data-placement="top" title="plane"></i>
                         <p>Wyjazd, który pozwala zapomnieć o szarej rzeczywistości - 7 dni na łodzi z dużą ilością
                             słońca, z dala od brzegu i zasiegu Internetu. Dzień ma prosty grafik: pobudka o wschodzie
                             słońca, nurkowanie, śniadanie, nurkowanie, obiad, nurkowanie, podwieczorek, zachód słońca,
@@ -314,12 +314,12 @@
                     </div>
 
                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
-                        <img src="Rumunia-square.jpg" class="img-responsive">
-                        <h3 class="name">Węgry, Rumunia, Mołdawia</h3>
-                        <h6 class="function">9 dni, 3000 km</h6>
-                        <i class="fas fa-car ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"
-                            data-placement="top" title="car"></i>
-                        <p>Rumunia to piękne, kręte, górskie drogi, malownicze szczyty i zamki oraz tradycyjne jedzenie.
+                        <img src="Australia-square.jpg" class="img-responsive">
+                        <h3 class="name">Australia</h3>
+                        <h6 class="function">6-8 tygodni</h6>
+                         <i class="fas fa-plane ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"
+                            data-placement="top" title="plane"></i>
+                        <p>TODO Rumunia to piękne, kręte, górskie drogi, malownicze szczyty i zamki oraz tradycyjne jedzenie.
                             Znacznie bliżej niż na Bałkany a tłumów w górach nie spotkamy. W zależności od chęci grupy
                             możemy zostać dłużej w górach, przejechać wzdłuż przełomu Dunaju, bądź zobaczyć malowniczą
                             deltę Dunaju - tak gdzie najdłuższa rzeka Europy wpływa do Morza Czarnego. Po drodze warto
