--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -314,7 +314,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
-                        <img src="Australia - Square.jpg" class="img-responsive">
+                        <img src="Australia_square.jpg" class="img-responsive">
                         <h3 class="name">Australia</h3>
                         <h6 class="function">6-8 tygodni</h6>
                          <i class="fas fa-plane ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"
