--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -308,9 +308,9 @@
                             terminie - wszystko zależy od uczestników.
                         </p>
 
-                        <a target="_blank" href="wyjazd-szczyty-balkanow.pdf"><i
+<!--                         <a target="_blank" href="wyjazd-szczyty-balkanow.pdf"><i
                                 class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0"
-                                data-toggle="tooltip" data-placement="top" title="Szczegóły wyjazdu"></i></a>
+                                data-toggle="tooltip" data-placement="top" title="Szczegóły wyjazdu"></i></a> -->
                     </div>
 
                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
@@ -326,9 +326,9 @@
                             zajrzeć do Mołdawii i zdobyć najwyższy szczyt Węgier.
                         </p>
 
-                        <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i
+<!--                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i
                                 class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0"
-                                data-toggle="tooltip" data-placement="top" title="Szczegóły wyjazdu"></i></a>
+                                data-toggle="tooltip" data-placement="top" title="Szczegóły wyjazdu"></i></a> -->
                     </div>
 
                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
