--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -232,7 +232,7 @@
 
                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
                         <img src="Rumunia-square.jpg" class="img-responsive">
-                        <h3 class="name">Węgry, Rumunia, Mołdawia</h3>
+                        <h3 class="name">Rumunia</h3>
                         <h6 class="function">9 dni, 3000 km</h6>
                         <i class="fas fa-car ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"
                             data-placement="top" title="car"></i>
