--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -63,7 +63,7 @@
 
         <div class="welcome-text">
             <h1>WYJAZDY, SZKOLENIA, NURKOWANIE</h1>
-            <h3>WYPOŻYCZALNIA, WYNAJEM MIESZKAŃ</h3>
+            <h3>WYPOŻYCZALNIA</h3>
 
             <a href="#learn">
                 <button class="button-welcome">ZOBACZ WIĘCEJ</button>
@@ -246,6 +246,10 @@
                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i
                                 class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0"
                                 data-toggle="tooltip" data-placement="top" title="Szczegóły wyjazdu"></i></a>
+
+                        <a target="_blank" href="https://www.icloud.com/sharedalbum/#B0bG4Tcsm8unrlH"><i
+                                class="ment-ico fa-regular fa-image d-inline-block" tabindex="0"
+                                data-toggle="tooltip" data-placement="top" title="Rumunia 2021"></i></a>
                     </div>
 
                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
