--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -244,11 +244,11 @@
                         </p>
 
                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i
-                                class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0"
+                                class="ment-ico fa-regular fa-file-pdf" tabindex="0"
                                 data-toggle="tooltip" data-placement="top" title="Szczegóły wyjazdu"></i></a>
 
                         <a target="_blank" href="https://www.icloud.com/sharedalbum/#B0bG4Tcsm8unrlH"><i
-                                class="ment-ico fa-regular fa-image d-inline-block" tabindex="0"
+                                class="ment-ico fa-regular fa-image" tabindex="1"
                                 data-toggle="tooltip" data-placement="top" title="Rumunia 2021"></i></a>
                     </div>
 
