--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -248,7 +248,7 @@
                                 data-toggle="tooltip" data-placement="top" title="Szczegóły wyjazdu"></i></a>
 
                         <a target="_blank" href="https://www.icloud.com/sharedalbum/#B0bG4Tcsm8unrlH"><i
-                                class="ment-ico fa-regular fa-image" tabindex="1"
+                                class="ment-ico2 fa-regular fa-image" tabindex="1"
                                 data-toggle="tooltip" data-placement="top" title="Rumunia 2021"></i></a>
                     </div>
 
