--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -244,12 +244,16 @@
                         </p>
 
                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i
-                                class="ment-ico fa-regular fa-file-pdf" tabindex="0"
-                                data-toggle="tooltip" data-placement="top" title="Szczegóły wyjazdu"></i></a>
+                                class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0"
+                                data-toggle="tooltip" data-placement="bottom" title="Szczegóły wyjazdu"></i></a>
 
                         <a target="_blank" href="https://www.icloud.com/sharedalbum/#B0bG4Tcsm8unrlH"><i
-                                class="ment-ico2 fa-regular fa-image" tabindex="1"
+                                class="ment-ico fa-regular fa-image d-inline-block" tabindex="1"
                                 data-toggle="tooltip" data-placement="top" title="Rumunia 2021"></i></a>
+
+<!--                          <a target="_blank" href="https://www.linkedin.com/in/sebastian-pacuk/"><i class="fab fa-linkedin-in ment-ico d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Zobacz profil mentora"></i></a> -->
+<!--                         <a target="_blank" href="https://calendly.com/spacuk/konsultacje"><i class="fas fa-calendar-alt ment-ico d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Zarezerwuj spotkanie"></i></a> -->
+                        
                     </div>
 
                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
