--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -251,8 +251,11 @@
                                 class="ment-ico fa-regular fa-image d-inline-block" tabindex="1"
                                 data-toggle="tooltip" data-placement="top" title="Rumunia 2021"></i></a> -->
 
-                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i class="fab fa-file-pdf ment-ico d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Przykładowy plan wyjazdu"></i></a>
-                         <a target="_blank" href="https://www.icloud.com/sharedalbum/#B0bG4Tcsm8unrlH"><i class="fas fa-image ment-ico d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Rumunia 2021 - zdjęcia"></i></a>
+                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i class="fab fa-linkedin-in ment-ico d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Przykładowy plan wyjazdu"></i></a>
+                         <a target="_blank" href="https://www.icloud.com/sharedalbum/#B0bG4Tcsm8unrlH"><i class="fas fa-calendar-alt ment-ico d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Rumunia 2021 - zdjęcia"></i></a>
+
+<!--                          <a target="_blank" href="https://www.linkedin.com/in/sebastian-pacuk/"><i class="fab fa-linkedin-in ment-ico d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Zobacz profil mentora"></i></a>
+                        <a target="_blank" href="https://calendly.com/spacuk/konsultacje"><i class="fas fa-calendar-alt ment-ico d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Zarezerwuj spotkanie"></i></a> -->
                         
                     </div>
 
