--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -225,9 +225,9 @@
                             terminie - wszystko zależy od uczestników.
                         </p>
 
-                        <a target="_blank" href="wyjazd-szczyty-balkanow.pdf"><i
-                                class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0"
-                                data-toggle="tooltip" data-placement="top" title="Szczegóły wyjazdu"></i></a>
+                        <a target="_blank" href="wyjazd-szczyty-balkanow.pdf"><i class="fas fa-file-pdf ment-ico d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Przykładowy plan wyjazdu"></i></a>
+                         <a target="_blank" href="https://www.icloud.com/sharedalbum/pl-pl/#B0bGY8gBY8sNrHT"><i class="fas fa-image ment-ico d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Bałkany 2023 - zdjęcia"></i></a>
+                        
                     </div>
 
                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
