--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -332,7 +332,7 @@
                                 data-toggle="tooltip" data-placement="top" title="Szczegóły wyjazdu"></i></a> -->
                     </div>
 
-                    <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
+<!--                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
                         <img src="Egipt-square.jpg" class="img-responsive">
                         <h3 class="name">Safari nurkowe w Egipcie</h3>
                         <h6 class="function">7 dni</h6>
@@ -346,7 +346,7 @@
                         </p>
 
                         <!--                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Szczegóły wyjazdu"></i></a> -->
-                    </div>
+                    </div> -->
 
 <!-- 
                     <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i
