--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -154,11 +154,11 @@
                             chętnie pomogę. </p>
                     </div>
 
-                    <div class="col-md-1 flex-center"><i class="fas fa-hammer"></i></div>
+<!--                     <div class="col-md-1 flex-center"><i class="fas fa-hammer"></i></div>
                     <div class="col-md-11 flex-center">
                         <p>Jeżeli potrzebujesz wiertarkę, wkrętarkę, multitool, szlifierkę kątową czy inne podstawowe
                             narzędzia, to też da się je ode mnie pożyczyć.</p>
-                    </div>
+                    </div> -->
 
                     <div class="col-md-1 flex-center"><i class="fas fa-tasks"></i></div>
                     <div class="col-md-11 flex-center">
