--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -120,6 +120,12 @@
                             tych miejsc udało mi się zanurkować.</p>
                     </div>
 
+                    <div class="col-md-1 flex-center"><i class="fas fa-camera"></i></div>
+                    <div class="col-md-11 flex-center">
+                        <p>Każdy wyjazd to nowe wspomnienia i dziesiątki zdjęć, które przypominają nam najciekawsze momenty. 
+                            Po każdym wyjeździe możesz liczyć na starannie wyselekcjonowaną kolekcję zdjęć, by mieć co wspominać zimową porą.</p>
+                    </div>
+
                     <div class="col-md-1 flex-center"><i class="fas fa-mountain-sun"></i></div>
                     <div class="col-md-11 flex-center">
                         <p>Z górami jestem związany od pradawnych czasów. Wspinałem się latem i zimą, zdobyłem wiele
