--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -352,7 +352,7 @@
                         </p>
 
                         <!--                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Szczegóły wyjazdu"></i></a> -->
-                    </div> -->
+<!--                     </div>  -->
 
 <!-- 
                     <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i
