--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -268,7 +268,8 @@
                             niezapomnianych nurków w ciągu tygodnia, jedne z najpiękniejszych raf na świecie.
                         </p>
 
-                        <!--                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Szczegóły wyjazdu"></i></a> -->
+<!--                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i class="fas fa-file-pdf ment-ico d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Przykładowy plan wyjazdu"></i></a> -->
+                        <a target="_blank" href="https://www.icloud.com/sharedalbum/#B0b5Uzl7VI37fu0"><i class="fas fa-image ment-ico d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Egipt - zdjęcia"></i></a>
                     </div>
 
 
