--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -160,12 +160,6 @@
                             chętnie pomogę. </p>
                     </div>
 
-<!--                     <div class="col-md-1 flex-center"><i class="fas fa-hammer"></i></div>
-                    <div class="col-md-11 flex-center">
-                        <p>Jeżeli potrzebujesz wiertarkę, wkrętarkę, multitool, szlifierkę kątową czy inne podstawowe
-                            narzędzia, to też da się je ode mnie pożyczyć.</p>
-                    </div> -->
-
                     <div class="col-md-1 flex-center"><i class="fas fa-tasks"></i></div>
                     <div class="col-md-11 flex-center">
                         <p>Jeżeli zastanawiasz się jak ja to wszystko ogarniam, to chętnie Ci o tym opowiem ;)</p>
@@ -316,9 +310,8 @@
                             terminie - wszystko zależy od uczestników.
                         </p>
 
-<!--                         <a target="_blank" href="wyjazd-szczyty-balkanow.pdf"><i
-                                class="ment-ico fa-regular fa-file-pdf d-inline-block" tabindex="0"
-                                data-toggle="tooltip" data-placement="top" title="Szczegóły wyjazdu"></i></a> -->
+                        <a target="_blank" href="https://www.icloud.com/sharedalbum/#B0b5n8hH4HwSZTz"><i class="fas fa-image ment-ico d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Indonezja - zdjęcia"></i></a>
+                        
                     </div>
 
                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
