--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -239,8 +239,7 @@
                         <p>Rumunia to piękne, kręte, górskie drogi, malownicze szczyty i zamki oraz tradycyjne jedzenie.
                             Znacznie bliżej niż na Bałkany a tłumów w górach nie spotkamy. W zależności od chęci grupy
                             możemy zostać dłużej w górach, przejechać wzdłuż przełomu Dunaju, bądź zobaczyć malowniczą
-                            deltę Dunaju - tak gdzie najdłuższa rzeka Europy wpływa do Morza Czarnego. Po drodze warto
-                            zajrzeć do Mołdawii i zdobyć najwyższy szczyt Węgier.
+                            deltę Dunaju - tak gdzie najdłuższa rzeka Europy wpływa do Morza Czarnego.
                         </p>
 
 
