--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -31,7 +31,7 @@
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a href="#home"><img src="img/logo3.png" class="logo img-fluid"></a>
+            <a href="#home"><img src="logo-prototype.jpeg" class="logo img-fluid"></a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -43,12 +43,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#mentors">WYJAZDY</a>
                     </li>
-                    <li class="nav-item">
+<!--                     <li class="nav-item">
                         <a class="nav-link" href="#faq">FAQ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#price">CENNIK</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">KONTAKT</a>
                     </li>
