--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -172,7 +172,7 @@
 
     <!--  -----  GODZINY  ----- -->
 
-    <section class="hours">
+<!--     <section class="hours">
         <div class="row container-fluid">
             <div class="col-md-12 flex-center">
                 <div class="row container-box">
@@ -195,7 +195,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <div id="mentors"></div>
@@ -562,7 +562,7 @@
     </section>
 
     <!--  -----  CENNIK  -----  -->
-
+<!-- 
     <div id="price"></div>
 
     <section class="price container">
@@ -578,21 +578,21 @@
                     <table class="table table-hover table-price">
                         <thead>
                             <tr>
-                                <!--                           <th></th> -->
+                                                          <th></th>
                                 <th>Junior</th>
                                 <th>Senior</th>
 
-                                <!--                           <th>Lead</th> -->
-                                <!--                           <th></th> -->
+                                                          <th>Lead</th>
+                                                          <th></th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <!--                           <td>1 godzina</td> -->
+                                                          <td>1 godzina</td>
 
                                 <td>150 zł / 60 min</td>
                                 <td>300 zł / 60 min</td>
-                                <!--                           <td></td> -->
+                                                          <td></td>
                             </tr>
                         </tbody>
                     </table>
@@ -605,14 +605,14 @@
                         maksymalnie 1,5 godziny takiego wsparcia na tydzień, a ceny kursów zaczynają się od 10 000 zł.
                     </p>
 
-                    <!--                 <p> Chciałbyś <span class="bold">rabat</span> nawet <span class="bold">25%</span>? Nic prostszego - wykonuj zadania i zbieraj punkty - czym więcej punktów zdobędziesz tym tańsza będzie Twoja nauka! </p> -->
+                                    <p> Chciałbyś <span class="bold">rabat</span> nawet <span class="bold">25%</span>? Nic prostszego - wykonuj zadania i zbieraj punkty - czym więcej punktów zdobędziesz tym tańsza będzie Twoja nauka! </p>
 
                     <p>Wybór należy do Ciebie: jeżeli preferujesz naukę w toku indywidualnym, to zapraszamy do
                         współpracy, jeżeli wolisz uczyć się w grupie, to zapraszamy do konkurencji ;)</p>
                 </div>
 
             </div>
-    </section>
+    </section> -->
 
     <!--  -----  FORMULARZ KONTAKTOWY  -----  -->
 
