--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -400,13 +400,13 @@
 
     <!--  -----  FAQ  ------->
 
-    <div id="faq"></div>
+<!--     <div id="faq"></div>
 
     <section class="faq container-fluid">
 
         <div class="faq-topic">
-            <!--                 <h2>CZY NAUKA PROGRAMOWANIA NA GODZINY JEST DLA MNIE?</h2> -->
-            <!--                 <h6>odpowiedzi na najbardziej nurtujące pytania</h6> -->
+                            <h2>CZY NAUKA PROGRAMOWANIA NA GODZINY JEST DLA MNIE?</h2>
+                            <h6>odpowiedzi na najbardziej nurtujące pytania</h6>
             <h2>ODPOWIEDZI NA NAJBARDZIEJ NURTUJĄCE WAS PYTANIA</h2>
         </div>
 
@@ -514,13 +514,13 @@
                     Jak się z Wami skontaktować?
                 </h4>
 
-                <!-- <p>Odwiedź nasz <a target="_blank" href="https://www.facebook.com/PassionateSoftwareEngineer"><span class="bold"> fanpage na Facebook'u</span></a> lub użyj ikonki Messenger'a w prawym dolnym rogu strony i na czacie porozmawiaj bezpośrednio z mentorem.</p> -->
+                <p>Odwiedź nasz <a target="_blank" href="https://www.facebook.com/PassionateSoftwareEngineer"><span class="bold"> fanpage na Facebook'u</span></a> lub użyj ikonki Messenger'a w prawym dolnym rogu strony i na czacie porozmawiaj bezpośrednio z mentorem.</p>
 
-                <!--<p>Możesz też skorzystać z <a href="#form"><span class="bold">formularza kontaktowego</span></a> poniżej, Możesz <a href="tel:+48xxxxxxxxx"><span class="bold">zadzwonić</span></a> do nas lub-->
+                <p>Możesz też skorzystać z <a href="#form"><span class="bold">formularza kontaktowego</span></a> poniżej, Możesz <a href="tel:+48xxxxxxxxx"><span class="bold">zadzwonić</span></a> do nas lub
                 Możesz do nas napisać <a href="mailto:piotr@kolacz.it"><span class="bold">maila</span></a>. W każdym
                 przypadku odpowie Ci bezpośrednio mentor! </p>
 
-                <!-- <p>Masz wiele pytań? Od razu umów się na <a target="_blank" href="https://calendly.com/kolacz-piotrek/konsultacje"><span class="bold">spotkanie z mentorem</span></a>. Za pierwsze spotkanie nic nie płacisz. </p> -->
+                <p>Masz wiele pytań? Od razu umów się na <a target="_blank" href="https://calendly.com/kolacz-piotrek/konsultacje"><span class="bold">spotkanie z mentorem</span></a>. Za pierwsze spotkanie nic nie płacisz. </p>
 
             </div>
 
@@ -560,7 +560,7 @@
 
         </div>
     </section>
-
+ -->
     <!--  -----  CENNIK  -----  -->
 <!-- 
     <div id="price"></div>
