--- a/wyjazdy.html
+++ b/wyjazdy.html
@@ -31,7 +31,7 @@
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a href="#home"><img src="logo-prototype.jpeg" class="logo img-fluid"></a>
+            <a href="#home"><img src="logo-prototype.jpg" class="logo img-fluid"></a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav">
                     <li class="nav-item">
