--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                         <a class="nav-link" href="#home">START</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#learn">CO MOŻNA ZE MNĄ ZAŁATWIĆ?</a>
+                        <a class="nav-link" href="#about">CO MOŻNA ZE MNĄ ZAŁATWIĆ?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#mentors">WYJAZDY</a>
+                        <a class="nav-link" href="#trips">WYJAZDY</a>
                     </li>
 <!--                     <li class="nav-item">
                         <a class="nav-link" href="#faq">FAQ</a>
@@ -65,7 +65,7 @@
             <h1>WYJAZDY, SZKOLENIA, NURKOWANIE</h1>
             <h3>WYPOŻYCZALNIA</h3>
 
-            <a href="#learn">
+            <a href="#about">
                 <button class="button-welcome">ZOBACZ WIĘCEJ</button>
             </a>
         </div>
@@ -74,7 +74,7 @@
 
     <!--   -----  SEKCJA JAK UCZYMY  ------->
 
-    <div id="learn"></div>
+    <div id="about"></div>
 
     <section class="learn container">
 
@@ -198,7 +198,7 @@
     </section> -->
 
 
-    <div id="mentors"></div>
+    <div id="trips"></div>
 
     <section class="team container-fluid">
 
