--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div class="welcome-text">
             <h1>WYJAZDY, SZKOLENIA, NURKOWANIE</h1>
-            <h3>WYPOŻYCZALNIA</h3>
+<!--             <h3>WYPOŻYCZALNIA</h3> -->
 
             <a href="#about">
                 <button class="button-welcome">ZOBACZ WIĘCEJ</button>
