--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
 
                         <p><i class="fas fa-file-pdf"></i>
 
-                            <a target="_blank" href="/polityka_prywatnosci.pdf">Polityka prywatności</a>
+                            <a target="_blank" href="rodo/polityka_prywatnosci.pdf">Polityka prywatności</a>
                         </p>
 
 
