--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
                         <h6 class="function">16 dni</h6>
                         <i class="fas fa-plane ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"
                             data-placement="top" title="plane"></i>
-                        <p>TODO Prawdziwa przygoda - kilkanaście krajów w kilkanaście dni. Piękne, puste góry, słońce,
-                            przyjaźni lokalsi i przepyszne tradycyjne jedzenie. Wyprawa pokazuje, że w Europie są
-                            jeszcze spokojne miejsca z dala od zatłoczonych szlaków. Gdy robi się zbyt intensywnie,
-                            możemy zatrzymać się w jednym miejscu na dłużej a na pozostałe szczyty wrócić w późniejszym
-                            terminie - wszystko zależy od uczestników.
+                        <p>Wyprawa do Indonezji to niezapomniane przeżycie i możliwość poznania jednego z najciekawszych krajów Azji Południowo–Wschodniej. 
+                            Indonezja stanowi niespotykaną mozaikę ludzi i ich kultur. Poznawanie Indonezji rozpoczynamy od wyspy Bali, której piękno urzeka tak na lądzie, jak i pod wodą. 
+                            Natomiast na niezapomniane safari nurkowe zapraszamy w pobliże wyspy Komodo. 
+                            Nurkowania wokół wysp Komodo, Rincia czy Flores to niezapomniane przeżycia, gdyż właśnie tam znajdują się jedne z najpiękniejszych miejsc do nurkowania w całej Azji Południowo-Wschodniej, te niezwykłe i niespotykane rafy koralowe oraz bogactwo ryb tropikalnych, zachwycą każdego nurka. 
+                            A trekking po wyspie Flores, pozwoli Wam poznać prawdziwą Indonezję, z jej urokliwymi miejscami i ludnością.
                         </p>
 
                         <a target="_blank" href="https://www.icloud.com/sharedalbum/#B0b5n8hH4HwSZTz"><i class="fas fa-image ment-ico d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Indonezja 2019"></i></a>
@@ -284,11 +284,11 @@
                         <h6 class="function">6-8 tygodni</h6>
                          <i class="fas fa-plane ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"
                             data-placement="top" title="plane"></i>
-                        <p>TODO Rumunia to piękne, kręte, górskie drogi, malownicze szczyty i zamki oraz tradycyjne jedzenie.
-                            Znacznie bliżej niż na Bałkany a tłumów w górach nie spotkamy. W zależności od chęci grupy
-                            możemy zostać dłużej w górach, przejechać wzdłuż przełomu Dunaju, bądź zobaczyć malowniczą
-                            deltę Dunaju - tak gdzie najdłuższa rzeka Europy wpływa do Morza Czarnego. Po drodze warto
-                            zajrzeć do Mołdawii i zdobyć najwyższy szczyt Węgier.
+                        <p>Australia jest ogromna. Spędziłem tam tylko 6 tygodni, większość ludzi których spotykałem na swojej drodze podróżowała przez kilkanaście miesięcy. 
+                        Ja postanowiłem zwiedzić wschodnie wybrzeże, zaczynając od tropikalnego Cape Tribulation, poprzez Cairns, Brisbane, Byron Bay 🏄, Sydney, Melbourne aż po Adelaide. 
+                            Po drodze zahaczyliśmy (na poszczególne odcinki dołączały do mnie inne osoby) o stolicę Australii Canberra oraz zdobyliśmy najwyższy szczyt kontynentu: Górę Kościuszki. 
+                            Udało mi się też odbyć jedno z najpiękniejszych nurkowań na świecie na wraku SS Yongala, zobaczyć dziesiątki kangurów 🦘 i Koala 🐨. 
+                            Czuję niedosyt i chętnie wrócę by dalej odkrywać ten uroczy kontynent.
                         </p>
 
 <!--                         <a target="_blank" href="wyjazd-wegry-rumunia-moldawia.pdf"><i
