--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>kolacz.it</title>
 
     <meta name="description" content="Wyjazdy, wyprawy, nurkowanie, wypożyczalnia">
-    <meta name="keywords" content="Wyjazdy, wyprawy, nurkowanie, wypożyczalnia">
+    <meta name="keywords" content="Wyjazdy, wyprawy, nurkowanie, szkolenia, wypożyczalnia">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.6.0/css/all.css" crossorigin="anonymous">
@@ -630,7 +630,7 @@
 
 
         <!--     <script type="text/javascript" src="js/form-submission-handler.js"></script> -->
-        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<!--         <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <!-- <script src="js/scroll2.js"></script> -->
 
