--- a/index.html
+++ b/index.html
@@ -628,18 +628,15 @@
         </footer>
 
 
-        <!--     <script type="text/javascript" src="js/form-submission-handler.js"></script> -->
-<!--         <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <!-- <script src="js/scroll2.js"></script> -->
 
         <script type="text/javascript" id="cookieinfo" src="https://cookieinfoscript.com/js/cookieinfo.min.js"
             data-message="Ta strona nie używa plików Cookie, korzystając ze strony nie musisz zgadzać się na ich użycie ;)"
             data-moreinfo="https://pl.wikipedia.org/wiki/HTTP_cookie" data-linkmsg="Więcej informacji">
             </script>
-        <!--             data-moreinfo="https://drive.google.com/open?id=1_DrlYZVEt3eK__zO06lANOIQDijBVt88"  -->
 
-        <!-- https://cookieinfoscript.com/ -->
+
 </body>
 
 </html>
