--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
                          <i class="fas fa-plane ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"
                             data-placement="top" title="plane"></i>
                         <p>Australia jest ogromna. Spędziłem tam tylko 6 tygodni, większość ludzi których spotykałem na swojej drodze podróżowała przez kilkanaście miesięcy. 
-                        Ja postanowiłem zwiedzić wschodnie wybrzeże, zaczynając od tropikalnego Cape Tribulation, poprzez Cairns, Brisbane, Byron Bay 🏄, Sydney, Melbourne aż po Adelaide. 
-                            Po drodze zahaczyliśmy (na poszczególne odcinki dołączały do mnie inne osoby) o stolicę Australii Canberra oraz zdobyliśmy najwyższy szczyt kontynentu: Górę Kościuszki. 
+                        Ja postanowiłem zwiedzić wschodnie wybrzeże, zaczynając od tropikalnego Cape Tribulation, poprzez egzotyczne Cairns, malownicze Whitsundays, Brisbane, Byron Bay 🏄, Sydney, Melbourne aż po Adelaide.
+                            Po drodze zahaczyliśmy o stolicę Australii Canberra oraz zdobyliśmy najwyższy szczyt kontynentu: Górę Kościuszki.
                             Udało mi się też odbyć jedno z najpiękniejszych nurkowań na świecie na wraku SS Yongala, zobaczyć dziesiątki kangurów 🦘 i Koala 🐨. 
-                            Czuję niedosyt i chętnie wrócę by dalej odkrywać ten uroczy kontynent.
+                            Łącznie przejechałem ponad 7 000 kilometrów. Czuję niedosyt i chętnie wrócę by dalej odkrywać ten uroczy kontynent.
                         </p>
 
                         <a target="_blank" href="https://www.icloud.com/sharedalbum/#B0bGI9HKK8reTEn"><i class="fas fa-image ment-ico d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Australia 2022"></i></a>
