--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
                          <i class="fas fa-plane ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"
                             data-placement="top" title="plane"></i>
                         <p>Australia jest ogromna. Spędziłem tam tylko 6 tygodni, większość ludzi których spotykałem na swojej drodze podróżowała przez kilkanaście miesięcy. Łącznie przejechałem ponad 7 000 kilometrów. Czuję niedosyt i chętnie wrócę by dalej odkrywać ten uroczy kontynent. 
-                            <br/>
+                            <br/><br/>
                         W 2021 roku postanowiłem zwiedzić wschodnie wybrzeże, zaczynając od tropikalnego Cape Tribulation, poprzez egzotyczne Cairns, malownicze Whitsundays, Brisbane, Byron Bay 🏄, Sydney, Melbourne aż po Adelaide. Po drodze zahaczyłem o stolicę Australii Canberra oraz zdobyłem najwyższy szczyt kontynentu: Górę Kościuszki.
-                        <br/>
-                            Udało mi się też odbyć jedno z najpiękniejszych nurkowań na świecie na wraku SS Yongala, zobaczyć dziesiątki kangurów 🦘 i Koala 🐨. 
+                        <br/><br/>
+                            Udało mi się też odbyć jedno z najpiękniejszych nurkowań na świecie na wraku SS Yongala 🤿, zobaczyć dziesiątki kangurów 🦘 i Koala 🐨. 
                            
                         </p>
 
