--- a/index.html
+++ b/index.html
@@ -254,8 +254,10 @@
                         <i class="fas fa-plane ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"
                             data-placement="top" title="plane"></i>
                         <p>Wyprawa do Indonezji to niezapomniane przeżycie i możliwość poznania jednego z najciekawszych krajów Azji Południowo–Wschodniej. 
-                            Indonezja stanowi niespotykaną mozaikę ludzi i ich kultur. Poznawanie Indonezji rozpoczynamy od wyspy Bali, której piękno urzeka tak na lądzie, jak i pod wodą. 
-                            Natomiast na niezapomniane safari nurkowe zapraszamy w pobliże wyspy Komodo. 
+                            Indonezja stanowi niespotykaną mozaikę ludzi i ich kultur. 
+                            <br/><br/>
+                            Poznawanie Indonezji rozpoczynamy od wyspy Bali, której piękno urzeka tak na lądzie, jak i pod wodą. Natomiast na niezapomniane safari nurkowe zapraszamy w pobliże wyspy Komodo. 
+                            <br/><br/>
                             Nurkowania wokół wysp Komodo, Rincia czy Flores to niezapomniane przeżycia, gdyż właśnie tam znajdują się jedne z najpiękniejszych miejsc do nurkowania w całej Azji Południowo-Wschodniej, te niezwykłe i niespotykane rafy koralowe oraz bogactwo ryb tropikalnych, zachwycą każdego nurka. 
                             A trekking po wyspie Flores, pozwoli Wam poznać prawdziwą Indonezję, z jej urokliwymi miejscami i ludnością.
                         </p>
