--- a/index.html
+++ b/index.html
@@ -127,22 +127,22 @@
                             szlakach. Chcesz dołączyć do wspólnej przygody?</p>
                     </div>
 
-                    <div class="col-md-1 flex-center"><i class="fas fa-desktop"></i></div>
+<!--                     <div class="col-md-1 flex-center"><i class="fas fa-desktop"></i></div>
                     <div class="col-md-11 flex-center">
                         <p>Pomogłem wielu osobom wejść do świata IT i zostać programistą. Przez lata szkoliłem osoby,
                             które chciały się przebranżowić i spróbować swoich sił jako Software Engineer. Stworzyłem
                             autorskie kursy programowania, które do dzisiaj są wykorzystywane przez kursantów. Choć, z
                             braku czasu, nie zajmuję się już aktywnie szkoleniami chętnie dzielę się zdobytym
                             doświadczeniem i pomagam osobom, które szukają swojej nowej drogi.</p>
-                    </div>
+                    </div> -->
 
-                    <div class="col-md-1 flex-center"><i class="fas fa-home"></i></div>
+<!--                     <div class="col-md-1 flex-center"><i class="fas fa-home"></i></div>
                     <div class="col-md-11 flex-center">
                         <p>Nadwyżki finansowe inwestuję w mieszkania na wynajem. Jeżeli szukasz porady jak bezpiecznie
                             wynająć swoje mieszkanie, jak podpisać umowę, która Cię zabezpieczy, szukasz mieszkania dla
                             siebie lub chcesz porozmawiać z osobą, która od lat z sukcesami inwestuje w mieszkania, by
                             dowiedzieć się jak to zrobić by zarobić - daj znać, chętnie pomogę!</p>
-                    </div>
+                    </div> -->
 
                     <div class="col-md-1 flex-center"><i class="fas fa-skiing"></i></div>
                     <div class="col-md-11 flex-center">
@@ -152,10 +152,10 @@
                             chętnie pomogę. </p>
                     </div>
 
-                    <div class="col-md-1 flex-center"><i class="fas fa-tasks"></i></div>
+<!--                     <div class="col-md-1 flex-center"><i class="fas fa-tasks"></i></div>
                     <div class="col-md-11 flex-center">
                         <p>Jeżeli zastanawiasz się jak ja to wszystko ogarniam, to chętnie Ci o tym opowiem ;)</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
