--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <section class="welcome jumbotron">
 
         <div class="welcome-text">
-            <h1>WYJAZDY, SZKOLENIA, NURKOWANIE</h1>
-            <h3></h3>
+            <h1>PODRÓŻE, PRZYGODY, SZKOLENIA</h1>
+            <h3>NURKOWANIE, GÓRY, BIEGANIE</h3>
 <!--             <h3>WYPOŻYCZALNIA</h3> -->
 
             <a href="#about">
@@ -144,13 +144,13 @@
                             dowiedzieć się jak to zrobić by zarobić - daj znać, chętnie pomogę!</p>
                     </div> -->
 
-                    <div class="col-md-1 flex-center"><i class="fas fa-skiing"></i></div>
+<!--                     <div class="col-md-1 flex-center"><i class="fas fa-skiing"></i></div>
                     <div class="col-md-11 flex-center">
                         <p>Prowadzę wypożyczalnię sprzętu turystycznego i nurkowego. Jeżeli potrzebujesz box na dach
                             samochodu, bagażnik na rowery, namiot, czekan, raki, narty, detektor lawinowy czy sprzęt
                             nurkowy (maska, BCD, pianka, płetwy, komputer nurkowy, latarka itp.) - napisz lub zadzwoń,
                             chętnie pomogę. </p>
-                    </div>
+                    </div> -->
 
 <!--                     <div class="col-md-1 flex-center"><i class="fas fa-tasks"></i></div>
                     <div class="col-md-11 flex-center">
