--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <section class="welcome jumbotron">
 
         <div class="welcome-text">
-            <h1>PODRÓŻE, PRZYGODY, SZKOLENIA</h1>
-            <h3>NURKOWANIE, GÓRY, BIEGANIE</h3>
+            <h1>PODRÓŻE I SZKOLENIA</h1>
+            <h3>NURKOWANIE I GÓRY</h3>
 <!--             <h3>WYPOŻYCZALNIA</h3> -->
 
             <a href="#about">
