--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                             wyruszyć na skiturową wyrypę.</p>
                     </div>
 
-                    <div class="col-md-1 flex-center"><i class="fas fa-coffee"></i></div>
+<!--                     <div class="col-md-1 flex-center"><i class="fas fa-coffee"></i></div>
                     <div class="col-md-11 flex-center">
                         <p>Uwielbiam kawę. Jeśli masz ochotę pogadać o podróżach, nurkowaniu, bieganiu, ciężkim losie
                             programisty, czy prowadzeniu firmy w Polsce (sic! kolejny sport ekstremalny) to zapraszam
                             Cię na filiżankę. Przy okazji możemy obejrzeć zdjęcia z minionych wypraw, umówić się na
                             kolejny wyjazd lub wspólne nurkowanie.</p>
-                    </div>
+                    </div> -->
 
                     <div class="col-md-1 flex-center"><i class="fas fa-fish"></i></div>
                     <div class="col-md-11 flex-center">
